--- a/Santi.html
+++ b/Santi.html
@@ -31,7 +31,7 @@
 	<big>(1881-1964)</big></center></h3><br><br><br>
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 	<p><big><strong>ALDO SANTI</strong>, ingegnere edile ed enigmografo, nacque a Vignola il 14 dicembre 1881.<br>
-Membro della più facoltosa famiglia di Campiglio di Vignola, questo personaggio si laureò in Ingegneria Industriale al Politecnico di Torino. Ritornato a Vignola, fu eletto consigliere comunale e subito dopo nominato assessore (1908-1909); contrasse poi matrimonio, rimanendo però vedovo quasi subito (1911). Nel corso della Prima Guerra Mondiale, combatté al fronte con il grado di tenente di artiglieria. Risposatosi nel 1919, ebbe cinque figli, dei quali dovette vederne morire ben quattro.<br>
+Membro della più facoltosa famiglia di Campiglio di Vignola, questo personaggio si laureò in Ingegneria Industriale al Politecnico di Torino. di Torino. Ritornato a Vignola, fu eletto consigliere comunale e subito dopo nominato assessore (1908-1909); contrasse poi matrimonio, rimanendo però vedovo quasi subito (1911). Nel corso della Prima Guerra Mondiale, combatté al fronte con il grado di tenente di artiglieria. Risposatosi nel 1919, ebbe cinque figli, dei quali dovette vederne morire ben quattro.<br>
 
 Santi era dotato di una personalità poliedrica che gli consentì di farsi conoscere non solo come valente ingegnere edile, la sua primaria occupazione professionale, ma anche come agronomo, scrittore, bibliofilo, attore, enigmografo ecc. <br>
 
