--- a/dicembre.html
+++ b/dicembre.html
@@ -58,8 +58,8 @@ Nell’immagine sottostante, Mario Pellegrini in divisa. Fonte: Massimo Bazzani 
 
 <p><big><strong>14 dicembre 1881</strong>: nacque a Vignola <strong>ALDO SANTI</strong>, ingegnere edile ed enigmografo.<br><br>
 Di professione ingegnere edile, nel corso della vita Aldo Santi coltivò con impegno svariati settori. A livello nazionale, egli è ancora ricordato come uno dei principali enigmografi del suo tempo e come uno dei padri dell’enigmistica moderna; utilizzò vari pseudonimi, primi fra tutti quelli di «Il Duca Borso» e «Soldatina».<br>
-Fu assessore del Comune di Vignola (1908-1909), consigliere e sindaco della locale Cassa di Risparmio (rispettivamente, nel 1944-1945 e nel 1950-1956), e nel 1950 vicepresidente – a fianco dell’amico <strong>Ugo Roli</strong> (1887-1959) – del Comitato Vignolese per le Onoranze a <strong>Lodovico Antonio Muratori</strong> (1672-1750) nel Secondo Centenario della Morte.<br>
-Santi si spense nella città natale il 29 giugno 1964. Venne sepolto all’interno del cimitero di Campiglio, nella tomba di famiglia.</big></p>
+Fu assessore (1908-1909) del Comune di Vignola, consigliere e sindaco della locale Cassa di Risparmio (rispettivamente, nel 1944-1945 e nel 1950-1956), e nel 1950 vicepresidente – a fianco dell’amico <strong>Ugo Roli</strong> (1887-1959) – del Comitato Vignolese per le Onoranze a <strong>Lodovico Antonio Muratori</strong> (1672-1750) nel Secondo Centenario della Morte.<br>
+Santi si spense nella città natale il 29 giugno 1964</big></p>
 <p><big>Nell’immagine qui sotto, Aldo Santi e la seconda moglie Margherita Zagnoli (1888-1974) in una foto tratta dal volume di <strong>Augusta Redorici Roffi</strong> (1922-2010), <i>Tavernelle</i>, Modena, Lito-Tipografia Paltrinieri, 2006, p. 92.</big></p><br><br>
 <img src="img/celebri vignolesi/Duca Borso/Santi.jpg" width="450" height="750"><br><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Aldo Santi?<br>Allora, visita il suo <a href="Santi.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
