--- a/giugno.html
+++ b/giugno.html
@@ -63,13 +63,13 @@ Nell’immagine sottostante, Casimiro Bettelli nella prima maturità. Fonte: <st
 <img src="img/celebri vignolesi/Bettelli/giovane.jpg" width="470" height="700"><br><br>
 <p><strong><big><center>Vuoi saperne di più su Casimiro Bettelli?<br>Allora, visita il suo <a href="Bettelli.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br>
 
-<p class="index-p3"><strong>23 giugno 1747</strong>: nacque a Vignola <strong>GIUSEPPE MARIA SOLI</strong>, architetto, ingegnere, pittore e insegnante.<br><br>  
+<p class="index-p3"><strong>23 giugno 1747</strong>: nacque a Vignola <strong>GIUSEPPE MARIA SOLI</strong> (alle volte chiamato semplicemente <strong>Giuseppe Soli</strong>), architetto, ingegnere, pittore e insegnante.<br><br>  
 
 Di umili origini, Giuseppe Maria Soli mostrò già da bambino un eccezionale talento nel disegno. Grazie a mecenati e sostegni di varia natura, ricevette una lunga e approfondita formazione artistica dapprima a Bologna e poi a Roma.<br> 
 
 Stimatissimo dagli Este e dagli Austria-Este come da Napoleone, Soli ebbe una carriera lunga e fortunata che lo vide divenire – fra l’altro – uno dei più importanti architetti neoclassici italiani e un apprezzato pittore attivo in diversi centri della Penisola.<br>  
 
-Nella natia Vignola, il nostro artista concepì l’elegante Casino – o Villa – Bellucci (poi, Tosi Bellucci), ora Residenza Municipale; anche se il progetto datava 1789, i lavori vennero iniziati molto probabilmente solo nel 1815 e furono conclusi tra il 1823 e il 1824. Ai decori parietali all’interno dell’edificio provvide in massima parte il conterraneo <strong>Pietro Minghelli</strong> (1780-1822), già suo allievo all’Accademia di Belle Arti di Modena, istituto presso il quale Soli fu a lungo non solo direttore, ma anche docente di Architettura Civile, Disegno e Pittura. Dal 1867 è conservato in questo casino l’<i>Autoritratto</i> che Soli dipinse non prima del 1805.<br>  
+Nella natia Vignola, il nostro artista concepì l’elegante Casino – o Villa – Bellucci (poi, Tosi Bellucci), ora Residenza Municipale; anche se il progetto datava 1789, i lavori vennero iniziati molto probabilmente solo nel 1815 e furono conclusi tra il 1823 e il 1824. Alle decorazioni parietali dell’edificio provvide in massima parte il conterraneo <strong>Pietro Minghelli</strong> (1780-1822), già suo allievo all’Accademia di Belle Arti di Modena, istituto presso il quale Soli fu a lungo non solo direttore, ma anche docente di Architettura Civile, Disegno e Pittura. Dal 1867 è conservato in questo casino l’<i>Autoritratto</i> che Soli dipinse non prima del 1805.<br>  
 
 L’anno dopo avere elaborato un progetto per l’ingrandimento della chiesa parrocchiale di Vignola, Soli morì a Modena il 20 ottobre 1822. Le sue spoglie vennero trasferite nel paese natale e inumate nel cimitero cittadino (quello che precedeva il camposanto ora in uso).<br><br> 
 
