--- a/Paradisi.html
+++ b/Paradisi.html
@@ -140,7 +140,7 @@ Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Paradisi/versi sciolti.jpg" width="380" height="580"></center><br><br>
 <p><big><big><center>Frontespizio di <i>Nel solenne aprimento della Università di Modena</i> [...], In Modena, Presso la Società Tipografica, 1772;<br> trattasi della versione a stampa del testo della prolusione all’anno accademico 1772/1773. Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Paradisi/prolusione.jpg" width="400" height="550"></center><br><br>
-<p><big><big><center>Frontespizio dell’<i>Elogio del principe Raimondo Montecuccoli</i>, Bologna, Dalla Stamperia di Lelio dalla Volpe, 1776.<br> Fonte: google.com<center></big></big></p>	
+<p><big><big><center>Frontespizio di <i>Elogio del principe Raimondo Montecuccoli</i>, Bologna, Dalla Stamperia di Lelio dalla Volpe, 1776.<br> Fonte: google.com<center></big></big></p>	
 <center><img src="img/celebri vignolesi/Paradisi/Elogio.jpg" width="340" height="600"></center><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></center></p><br>
 </section>
