--- a/dicembre.html
+++ b/dicembre.html
@@ -42,7 +42,7 @@ Nelle immagini sottostanti, il testo integrale della summenzionata lettera dedic
   
 <p><big><strong>2 dicembre 1876</strong>: morì a Vignola <strong>LUCA ANTONIO TOSI</strong>, medico, amministratore locale, letterato, studioso e patriota. Fu inumato nell’antico camposanto comunale; in seguito, le sue spoglie vennero traslate nella cappella Tosi Bellucci dell’attuale cimitero cittadino.<br><br>
 Luca Antonio Tosi nacque a Vignola il 27 ottobre 1811 in un’importante e facoltosa famiglia molto stimata nel Modenese. Mostrò subito avversione nei confronti del regime austroestense e diede il suo contributo per formare il Regno d’Italia e “fare gli Italiani”.<br>
-Molto legato alla sua comunità, egli s’impegnò sempre per garantirne il benessere da ogni punto di vista, egli va a collaborare con altre illuminate figure come <strong>Francesco Selmi</strong> (1817-1881), <strong>Alessandro Plessi</strong> (1824-1907) e <strong>Giovanni Rodolfi</strong> (1828-1896).<br>
+Molto legato alla sua comunità, egli s’impegnò sempre per garantirne il benessere da ogni punto di vista, trovandosi così a collaborare con altre illuminate figure come <strong>Francesco Selmi</strong> (1817-1881), <strong>Alessandro Plessi</strong> (1824-1907) e <strong>Giovanni Rodolfi</strong> (1828-1896).<br>
 Medico di professione, Tosi ricoprì diverse cariche politico-amministrative di primo piano a Vignola e fu autore sia di pubblicazioni di carattere medico sia di una <i>Storia cronologica di Vignola ad uso delle scuole</i> (1872).<br><br>
 Nell’immagine qui sotto, lapide funeraria di Luca Antonio Tosi, cappella gentilizia Tosi Bellucci, cimitero di Vignola.</big></p><br><br>
 <center><img src="img/celebri vignolesi/Tosi/Tomba.jpg" width="550" height="600"></center><br><br><br> 
