--- a/Novità.html
+++ b/Novità.html
@@ -42,6 +42,11 @@
 <p><big>Nell’immagine, vista della rocca di Vignola da Via Zenzano in una fotografia scattata il 4 aprile 2022.</big></p><br>
 <img src="img/FOTO VARIE/viatufo.jpg" width="600" height="800"><br><br><br><br><br><br>
 	
+<p><big><big><span style="text-decoration: underline;">3 dicembre 2022</span></big></big></p><br><br>
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>LA LUCCIOLA</strong></i>, la ventunesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
+«Nella prima sera in cui la luccioletta si levò a scintillare qua e là, su e giù per i campi ricchi e gloriosi di alte e grosse spighe, alcuni insetti, simili a lei, ma privi dello splendore ond’ella si abbellisce, le furono intorno, le fecero corteggio, e la accompagnarono con esclamazioni di meraviglia, lunga pezza, ne’ suoi divagamenti. La lucciola li udì, e come giovanettina inesperta e desiosa se ne tenne inorgoglita più del dovere; per ciò incedette innanzi, fingendo di non attendere ai loro ragionamenti, e dentro di sé lusingandosene assai, e gioendone da non capire nella pelle. Di tratto in tratto fermavasi sull’apice di una fogliolina o si appiccava ad un’arista in sembianza di suggere umori, ma più veramente per agio di ascoltare le lodi prodigatele; mantenendo contegno di modesta finché per il soverchio compiacersi interno perduto il freno, si lasciò trascorrere a discorso di se medesima co’ suoi ammiratori.»<br>
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br	
+	
 <p><big><big><span style="text-decoration: underline;">15 novembre 2022</span></big></big></p><br><br>
 <p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>L’AMORINO E LE SUE SVENTURE</strong></i>, la ventesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
 «Un gagliardo buffo di vento sollevò un nugolo di polvere da un giardino, e con esso diversi semi che portò via, turbinò per più ore e nel posare dell’impeto disperse qua e là. Un seme maturo di amorino dopo lungo errare cadde alla fine in un campo incolto, invaso dalle ortiche, dalle vulvarie e da altre piante selvatiche.<br>
