--- a/Soli1.html
+++ b/Soli1.html
@@ -94,6 +94,9 @@ Per volontà degli eredi del grande architetto, il Fondo Soli venne affidato nel
 	<p><center><big><big>L’antica Porta Sant’Agostino di Modena nell’incisione (a bulino su rame) che<br> Guglielmo Silvester (1763-1839) realizzò probabilmente nel 1791. Fonte: google.com</big></big></center><br>
 	<img src="img/FOTO VARIE/porta.jpg" width="650" height="450"><br><br><br>
 
+		<p><center><big><big>Il Ponte di Sant’Ambrogio in una cartolina risalente al 1900 ca. Fonte: google.com</big></big></center></p>
+<img src="img/celebri vignolesi/Soli Giuseppe Maria/ponte.jpg" width="760" height="470"><br><br><br>
+		
 <p><big><big><center>Una fotografia recente della facciata del Casino Tosi Bellucci (già Bellucci) a Vignola.</center></big></big></p>
 <img src="img/FOTO VARIE/Casino Tosi Bellucci.jpg"><br><br><br>
 <p><center><big><big>Una fotografia recente della facciata verso Piazza San Marco delle Procuratie Nuovissime di Venezia. Fonte: google.com</big></big></center><br>
