--- a/Redorici Roffi.html
+++ b/Redorici Roffi.html
@@ -64,7 +64,11 @@ progetto editoriale del Gruppo di Documentazione Vignolese “Mezaluna - Mario M
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/tomba Augusta.jpg" width="500" height="700"><br><br>
 <p><center><big>Due storiche “colonne” del Museo Civico di Vignola,<br>  Angela Giansante (a sinistra) e Maria Pia Corsini (a destra), a lungo strette collaboratrici della Redorici Roffi.</center></big></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/ringraziamento.jpg" width="550" height="750"><br><br>
-<p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br>
+
+<p><center><big>La locandina dell’evento pubblico del 15 dicembre 2022 per ricordare la Redorici Roffi presso il Museo Civico di Vignola a lei intitolato.</big></center></p>
+<img src="img/celebri vignolesi/Redorici Roffi Augusta/Locandina.jpg" width="550" height="750"><br><br>	
+	
+	<p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
