--- a/Pellegrini.html
+++ b/Pellegrini.html
@@ -45,8 +45,11 @@ Tornato in Patria a conflitto concluso dopo sei mesi e mezzo di prigionia (28 no
 
 Pellegrini morì a Modena il 2 aprile 1954.<br>
 
-Il suo paese natale gli ha intitolato la strada che mette in comunicazione diretta l’area della stazione dei treni e l’area dell’antico fossato secco che è a ridosso dell’ancora esistente sezione delle mura di cinta quattrocentesche del borgo (o castello, in origine «castelnuovo»). Il 5 novembre 2022 verrà apposta in questa via vignolese una targa in onore e alla memoria di Pellegrini.</big></p><br><br><br>
+Vignola gli ha intitolato la strada lungo la quale era collocata la sua casa natale (ora non più esistente): si tratta della via che mette in comunicazione diretta l’area della stazione dei treni e l’area dell’antico fossato secco che è a ridosso dell’ancora esistente sezione delle mura di cinta quattrocentesche del borgo (o castello, in origine «castelnuovo»).<br>  
 
+Il 5 novembre 2022, nella Sala Consiliare del Comune di Vignola, ha avuto luogo un evento pubblico in ricordo di quest’illustre concittadino. Nel corso di tale incontro, si è proceduto allo scoprimento di una targa in onore e alla memoria di Pellegrini, targa che nei giorni successivi è stata affissa nella via che porta il suo nome.<br><br>
+	
+		
 <h5><big><big><big><big><strong><center>BIBLIOGRAFIA E SITOGRAFIA MINIME DI RIFERIMENTO</center></strong></big></big></big></big></big></h5><br><br>
 
 <p><big><strong>ANONIMO</strong>: <a href="http://www.marina.difesa.it/noi-siamo-la-marina/storia/la-nostra-storia/medaglie/Pagine/PellegriniMario.aspx"><strong><i>Mario Pellegrini. Capitano di corvetta. Medaglia d’oro al Valor Militare</i></strong></a>, s.d. [ma non prima del 2018], senza paginazione (ultimo accesso, 4 novembre 2022).</big></p>	
@@ -73,6 +76,9 @@ Nello stesso portale <a href="https://www.lavocedelmarinaio.com/"><i>La voce del
 <p><center><big><big>Biglietto autografo di Pellegrini datato 19 febbraio 1937. Collezione privata.</big></big></center></p>
 <img src="img/celebri vignolesi/Pellegrini Mario/biglietto1.jpg" width="450" height="300"><br>
 <img src="img/celebri vignolesi/Pellegrini Mario/biglietto2.jpg" width="450" height="300"><br><br>
+<p><center><big><big>La locandina dell'evento in ricordo di Pellegrini organizzato nella Sala Consiliare del Comune di Vignola il 5 novembre 2022.</big></big></center></p>
+<img src="img/celebri vignolesi/Pellegrini Mario/locandina.jpg" width="490" height="710"><br><br>
+	
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
