--- a/Redorici Roffi.html
+++ b/Redorici Roffi.html
@@ -65,8 +65,8 @@ progetto editoriale del Gruppo di Documentazione Vignolese “Mezaluna - Mario M
 <p><center><big>Due storiche “colonne” del Museo Civico di Vignola,<br>  Angela Giansante (a sinistra) e Maria Pia Corsini (a destra), a lungo strette collaboratrici della Redorici Roffi.</center></big></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/ringraziamento.jpg" width="550" height="750"><br><br>
 
-<p><center><big>La locandina dell’evento pubblico del 15 dicembre 2022 per ricordare la Redorici Roffi presso il Museo Civico di Vignola a lei intitolato.</big></center></p>
-<img src="img/celebri vignolesi/Redorici Roffi Augusta/Locandina.jpg" width="550" height="750"><br><br>	
+<p><center><big>La locandina dell’evento pubblico del 15 dicembre 2022 per ricordare la Redorici Roffi<br> presso il Museo Civico di Vignola a lei intitolato.</big></center></p>
+<img src="img/celebri vignolesi/Redorici Roffi Augusta/Locandina.jpg" width="490" height="710"><br><br>
 	
 	<p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br>
 </section>
