--- a/Redorici Roffi.html
+++ b/Redorici Roffi.html
@@ -44,29 +44,32 @@ Il 5 novembre 2011 le venne intitolato il Museo Civico che aveva contribuito a f
 <h5><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></h5><br>
 
 <p><center><big>Una giovane Redorici Roffi fotografata a Tavernelle.<br>
-Fonte: Augusta Redorici Roffi - Maria Grazia Grilli, <i>Il molino di Campiglio e il molino di Tavernelle</i>,<br>  
-in Giampaolo Grandi (a cura di), <i>Con la Forza dell’Acqua. Storie d’acque, di opifici, di lavoro e di uomini<br> sul Canale di Marano, di S. Pietro, del Diamante, sul Canalino Castellano, sul Torbido</i>,<br> 
-progetto editoriale del Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”,<br> Savignano s.P., Tipolitografia F.G., 2010, pp. 107-122: 115.</big></center></p>
-<img src="img/celebri vignolesi/Redorici Roffi Augusta/giovane.jpg" width="650" height="700"><br><br>	
+Fonte: Augusta Redorici Roffi - Maria Grazia Grilli, <i>Il molino di Campiglio e il molino di Tavernelle,<br>  
+in Giampaolo Grandi (a cura di), Con la Forza dell’Acqua. Storie d’acque, di opifici, di lavoro e di uomini<br> sul Canale di Marano, di S. Pietro, del Diamante, sul Canalino Castellano, sul Torbido</i>,<br> 
+progetto editoriale del Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”,<br> Savignano s.P., Tipolitografia FG, 2010, pp. 107-122: 115.</big></center></p>
+<img src="img/celebri vignolesi/Redorici Roffi Augusta/giovane.jpg" width="650" height="700"><br><br>
+
 <p><center><big>La Redorici Roffi in un primo piano tratto dal volantino che informava degli eventi pubblici organizzati in suo ricordo,<br> a un anno e mezzo dalla scomparsa, e culminanti nell’intitolazione a lei del Museo Civico di Vignola (5 novembre 2011).</big></center></p>
-<img src="img/celebri vignolesi/Redorici Roffi Augusta/foto e firma.jpg" width="550" height="600"><br><br>
+<img src="img/celebri vignolesi/Redorici Roffi Augusta/foto e firma.jpg" width="530" height="580"><br><br>
+
 <p><center><big>La prima di copertina di uno dei libri scritti dalla Redorici Roffi:<br> 
-	<i>Tavernelle. Testimonianze e ricordi</i>, s.l., s.n. [Modena, Lito-Tipografia Paltrinieri], s.d. [ma: 1992].</big></center></p>
-<img src="img/celebri vignolesi/Redorici Roffi Augusta/Tavernelle.jpg" width="500" height="700"><br><br>	
+<i>Tavernelle. Testimonianze e ricordi</i> (s.l., s.n. [Modena, Lito-Tipografia Paltrinieri], s.d. [ma: 1992]).</big></center></p>
+<img src="img/celebri vignolesi/Redorici Roffi Augusta/Tavernelle.jpg" width="480" height="680"><br><br>
+
 <p><center><big>La prima di copertina di uno dei libri scritti dalla Redorici Roffi:<br> <i>Le Chiese di Campiglio. Memoria</i>, Vignola, Libreria “dei Contrari”, 2000.</big></center></p>
-<img src="img/celebri vignolesi/Redorici Roffi Augusta/Chiese di Campiglio MODIFICATA.jpg" width="500" height="750"><br><br>
-	
+<img src="img/celebri vignolesi/Redorici Roffi Augusta/Chiese di Campiglio MODIFICATA.jpg" width="480" height="730"><br><br>
+
 <p><center><big>La prima di copertina di uno dei libri scritti dalla Redorici Roffi (per la precisione, si tratta dell’ultimo, pubblicato postumo):<br> 
-<i>C’era una volta l’Impresa</i>, a cura di Maria Grazia Grilli, Vignola, s.n. [Savignano sul Panaro, Tipolitografia FG], 2011.</big></center></p>
-<img src="img/celebri vignolesi/Redorici Roffi Augusta/Impresa.jpg" width="500" height="750"><br><br>
-	
+Augusta Redorici Roffi, <i>C’era una volta l’Impresa</i>, a cura di Maria Grazia Grilli, Vignola, s.n. [Savignano sul Panaro, Tipolitografia FG], 2011.</big></center></p>
+<img src="img/celebri vignolesi/Redorici Roffi Augusta/Impresa.jpg" width="480" height="730"><br><br>
+
 <p><center><big>La tomba della Redorici Roffi e del marito.</big></center><br>
-<img src="img/celebri vignolesi/Redorici Roffi Augusta/tomba Augusta.jpg" width="500" height="700"><br><br>
+<img src="img/celebri vignolesi/Redorici Roffi Augusta/tomba Augusta.jpg" width="480" height="680"><br><br>
 <p><center><big>Due storiche “colonne” del Museo Civico di Vignola,<br>  Angela Giansante (a sinistra) e Maria Pia Corsini (a destra), a lungo strette collaboratrici della Redorici Roffi.</center></big></p>
-<img src="img/celebri vignolesi/Redorici Roffi Augusta/ringraziamento.jpg" width="550" height="750"><br><br>
+<img src="img/celebri vignolesi/Redorici Roffi Augusta/ringraziamento.jpg" width="500" height="700"><br><br>
 
 <p><center><big>La locandina dell’evento pubblico del 15 dicembre 2022 per ricordare la Redorici Roffi<br> presso il Museo Civico di Vignola a lei intitolato.</big></center></p>
-<img src="img/celebri vignolesi/Redorici Roffi Augusta/Locandina.jpg" width="490" height="710"><br><br>
+<img src="img/celebri vignolesi/Redorici Roffi Augusta/Locandina.jpg" width="470" height="690"><br><br>
 	
 	<p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br>
 </section>
