--- a/amleto.html
+++ b/amleto.html
@@ -28,7 +28,6 @@
 </header>
 <section>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br><br>
-	<p><center><strong><big><big><big><big><span style="text-decoration: underline;">LA PAGINA È ATTUALMENTE IN COSTRUZIONE</span></big></big></big></big></center></strong></p><br><br><br>
 <h3><center><big><big>AMLETO DEGLI ESPOSTI</big></big><br><br>
 	<big>(1889-1923)</big></center></h3><br><br><br>
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
@@ -49,7 +48,7 @@ Terminata la Prima Guerra Mondiale, Degli Esposti, pur avendo una famiglia, rima
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><big><big><center>Fotografia che ritrae Degli Esposti in divisa da sottotenente degli Specialisti del Genio (1918).<br> Fonte: Massimo Bazzani - Carlo Alberto Cavazzoni - Giampaolo Grandi - Gianluca Sandoni,<br> <i>Amleto e Aristide Degli Esposti eroici aviatori, vignolesi</i>, Gruppo di Documentazione Vignolese<br> “Mezaluna - Mario Menabue”, Savignano sul Panaro (MO), Tipolitografia F.G., 2010, p. 62.</center></big></big></p>
 <img src="img/celebri vignolesi/Degli Esposti Amleto/foto1.jpg" width="470" height="608"></p><br><br><br>
-<p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></center></p>
+<p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></big></center></p><br><br><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
