--- a/amleto.html
+++ b/amleto.html
@@ -48,6 +48,9 @@ Terminata la Prima Guerra Mondiale, Degli Esposti, pur avendo una famiglia, rima
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><big><big><center>Fotografia che ritrae Degli Esposti in divisa da sottotenente degli Specialisti del Genio (1918).<br> Fonte: Massimo Bazzani - Carlo Alberto Cavazzoni - Giampaolo Grandi - Gianluca Sandoni,<br> <i>Amleto e Aristide Degli Esposti eroici aviatori, vignolesi</i>, Gruppo di Documentazione Vignolese<br> “Mezaluna - Mario Menabue”, Savignano sul Panaro (MO), Tipolitografia F.G., 2010, p. 62.</center></big></big></p>
 <img src="img/celebri vignolesi/Degli Esposti Amleto/foto1.jpg" width="470" height="608"></p><br>
+<p><big><big><center>Fotografia recente del monumento funebre di Amleto Degli Esposti nel cimitero di Vignola.</center></big></big></p>
+<img src="img/celebri vignolesi/Degli Esposti Amleto/monumento.jpg" width="500" height="700"><br><br><br>
+<p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></big></center></p><br><br><br>
 
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></big></center></p><br><br><br>
 </section>
