--- a/Soli1.html
+++ b/Soli1.html
@@ -101,6 +101,8 @@ Per volontà degli eredi del grande architetto, il Fondo Soli venne affidato nel
 <img src="img/FOTO VARIE/Casino Tosi Bellucci.jpg"><br><br><br>
 <p><center><big><big>Una fotografia recente della facciata verso Piazza San Marco delle Procuratie Nuovissime di Venezia. Fonte: google.com</big></big></center><br>
 	<img src="img/FOTO VARIE/procuratie.jpg"><br><br><br>
+	<p><center><big><big>Una fotografia recente della parte centrale della facciata nord del Palazzo Ducale di Modena.<br> Fonte: <a href="https://www.giuseppemariasoli.it/galleria/">Giuseppe Maria Soli Bicentenario 1822-2022/Galleria</a></big></big></center><br>
+<img src="img/celebri vignolesi/Soli Giuseppe Maria/palazzo.jpg" width="760" height="470"><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
