--- a/Soli1.html
+++ b/Soli1.html
@@ -82,6 +82,9 @@ Per volontà degli eredi del grande architetto, il Fondo Soli venne affidato nel
 <p><center><big><big>Autore sconosciuto, ritratto postumo di Giuseppe Maria Soli, acquaforte, dal ritratto postumo dipinto nel 1847<br> da Luigi Roncaglia (documentato a Modena dal 1835 al 1853); questo quadro è conservato nella sede dell’antica<br> Accademia di Belle Arti, oggi sede centrale dell’Istituto d’Istruzione Secondaria “Adolfo Venturi”.<br> Fonte dell’incisione: <i>Cultura architettonica e scientifica nelle carte e nei libri della famiglia Soli (1771-1927).<br> Catalogo del «Fondo G. Soli» della Biblioteca dell’Accademia Nazionale di Scienze,</i> [<i>sic</i>, con virgola] <i>Lettere e Arti di Modena</i>,<br> a cura di Federica Missere Fontana, catalogo dell’Archivio di Federica Missere Fontana, catalogo della Biblioteca<br> con schede di Maria Eugenia Barbieri, Caterina Bonasegla, Massimiliano Bordini, Veronique Fiorini,<br> Alessandra Medici, Modena, Mucchi Editore, 2004, p. 333.</big></big></center></p>
 <img src="img/celebri vignolesi/Soli Giuseppe Maria/ritrattopostumo.jpg" width="400" height="600"><br><br><br>
 
+<p><center><big><big>Giovanni Cappelli (1813-1885), <i>Busto di Giuseppe Maria Soli</i> (1859-1860), marmo;<br> Istituto d’Istruzione Superiore “Adolfo Venturi”.</big></big></center></p>
+<img src="img/celebri vignolesi/Soli Giuseppe Maria/busto.jpg" width="430" height="550"><br><br><br>	
+	
 <p><center><big><big>Una fotografia recente della facciata del Palazzo Barberini di Via delle Quattro Fontane a Roma.<br> All’interno di esso, Soli fu attivo come pittore e decoratore nel 1780. Fonte: google.com</big></big></center></p>
 <img src="img/celebri vignolesi/Soli Giuseppe Maria/barberini.jpg" width="670" height="430"><br><br><br>
 
@@ -103,6 +106,8 @@ Per volontà degli eredi del grande architetto, il Fondo Soli venne affidato nel
 	<img src="img/FOTO VARIE/procuratie.jpg"><br><br><br>
 	<p><center><big><big>Una fotografia recente della parte centrale della facciata nord del Palazzo Ducale di Modena.<br> Fonte: <a href="https://www.giuseppemariasoli.it/galleria/">Giuseppe Maria Soli Bicentenario 1822-2022/Galleria</a></big></big></center><br>
 <img src="img/celebri vignolesi/Soli Giuseppe Maria/palazzo.jpg" width="760" height="470"><br><br><br>
+<p><center><big><big><i>Piazza Sant’Agostino a Modena con il monumento equestre del duca Francesco III d’Este</i>, olio su tela (1775);<br> Milano, Pinacoteca del Castello Sforzesco. Fonte: google.com</big></big></center><br>
+<img src="img/celebri vignolesi/Soli Giuseppe Maria/Immagine MODIFICATA.jpg" width="750" height="470"><br><br><br>		
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
