--- a/Santi.html
+++ b/Santi.html
@@ -41,7 +41,7 @@ Nel 1925 Santi vendette alla Treccani una collezione di opere enciclopediche e l
 
 Legatissimo al luogo natale e impegnato fino a tarda età nell’accrescere il bene della sua comunità d’appartenenza, Santi ricoprì cariche in seno alla Cassa di Risparmio della cittadina (consigliere dal 1944 al 1945 e sindaco dal 1950 al 1956), e nel 1950 occupò il ruolo di vicepresidente – a fianco dell’amico <strong>Ugo Roli</strong> (1887-1959) – del Comitato Vignolese per le Onoranze a <strong>Lodovico Antonio Muratori</strong> (1672-1750) nel Secondo Centenario della Morte.<br> 
 
-Il nostro personaggio si spense a Vignola il 29 giugno 1964 (questa, la data presente nella lapide funeraria; <strong>Augusta Redorici Roffi</strong> [1922-2010], nel suo <i>Le Chiese di Campiglio. Memoria</i>, Vignola, Libreria “dei Contrari”, 2000, p. 204, scrive però 26 giugno 1964). Venne sepolto all’interno del cimitero di Campiglio, nella tomba di famiglia. </big></p><br><br><br>
+Il nostro personaggio si spense a Vignola il 29 giugno 1964 (questa è la data presente nella lapide funeraria; <strong>Augusta Redorici Roffi</strong> [1922-2010], nel suo <i>Le Chiese di Campiglio. Memoria</i>, Vignola, Libreria “dei Contrari”, 2000, p. 204, scrive però 26 giugno 1964). Venne sepolto all’interno del cimitero di Campiglio, nella tomba di famiglia. </big></p><br><br><br>
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br>
 <p><big><big><center>Santi nella prima maturità. Fonte: Pippo [G. Riva] - Nam [M. Navona],<br> <i>Le riviste del passato</i>, «Il labirinto», a. V (2008), fasc. 1, pp. 72-81: 80. </big></big></p>
