--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -76,7 +76,7 @@
 
 <tr>
 <td><big><big><strong><a href="lucciola.html">21. La lucciola</a></strong></td>
-<td><big><big><strong><a href="camicia.html">22. La camicia ed il ranno</a></strong></td></tr>
+<td><big><big><strong><a href="camiciaranno.html">22. La camicia ed il ranno</a></strong></td></tr>
 
 <tr>
 <td><big><big><strong><a href="fringuello.html">23. Il fringuello viaggiatore</a></strong></td>
