--- a/Roli.html
+++ b/Roli.html
@@ -32,19 +32,27 @@
 	<big>(1887-1959)</big></center></h3><br><br><br>
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 <p><big><strong>UGO ROLI</strong>, educatore, scrittore, poeta, studioso di storia (anche locale), avvocato, funzionario pubblico ed enigmografo, nacque a Vignola il 23 febbraio 1887.<br> 
-Dai suoi genitori, Antonio Roli e Beatrice (detta “Bice”) Corradi, entrambi maestri elementari molto conosciuti e stimati nella comunità vignolese, eredita l’interesse per il mondo dell’insegnamento. Frequentato il Regio Ginnasio “L.A. Muratori” a Modena e la Scuola Normale di Forlimpopoli, ove ottenne l’abilitazione all’insegnamento elementare nel 1906, il nostro personaggio iniziò la sua carriera lavorativa come maestro elementare. Due anni dopo, seguì corsi di perfezionamento all’Università di Bologna e alla Scuola Samaritana Bolognese dell’Università Popolare “Giuseppe Garibaldi”.<br>
-Nel 1916 prese la laurea in Giurisprudenza presso l’Università di Modena.<br>  
-Roli partecipò alla Prima Guerra Mondiale in qualità di ufficiale di Stato Maggiore e fece numerose esperienze in prima linea. Nel corso del conflitto, vergò interessanti lettere (che furono poi pubblicate nel 1933) e venne decorato con la Medaglia d’Argento al Valor Militare, con la Croce di Guerra al Valor Militare e con tre Croci al Merito di Guerra.<br>
-Dopo la Vittoria, rientrò nella sua terra e svolse brillantemente per molti anni la professione di avvocato a Vignola e a Modena.<br>
-Nel 1919 figurò tra i fondatori e fu il primo presidente del Circolo “Amicizia” di Vignola, il quale ebbe sede a lungo all’interno del Palazzo Contrari Boncompagni. L’anno successivo sposò Virginia Bellei, dalla quale ebbe due figli, Antonio e Laura.<br>
-Nel 1922 fu commissario prefettizio nel paese natale e, due anni più tardi, superò gli esami di idoneità al Notariato.<br>
-Roli godette di una certa fama a livello nazionale sia come enigmografo (con lo pseudonimo di «Fiordaliso») sia come autore di libri scolastici per le Scuole Elementari.<br>
-Durante la vita, il nostro personaggio, nella sua terra d’origine, era apprezzato soprattutto come solerte cultore di memorie patrie e attento studioso di storia locale; nel 1950 fu vicepresidente, a fianco dell’amico enigmografo Aldo Santi, del Comitato Vignolese per le Onoranze a Lodovico Antonio Muratori nel Secondo Centenario della Morte. Attualmente, nel paese natale, egli è ricordato soprattutto per pubblicazioni poetiche spesso di alta sensibilità e di indubbio estro, fra le quali primeggiano due raccolte di versi, <i>Faléster</i> (1936, in dialetto modenese) e <i>Faléster dl’Inféren</i> (1951, in italiano e in dialetto).<br>
-Roli morì a Vignola il 25 giugno 1959.</big></p><br><br><br>
+Dai suoi genitori, Antonio Roli e Beatrice (detta “Bice”) Corradi, entrambi maestri elementari molto conosciuti e stimati nella comunità vignolese, questo personaggio ereditò l’interesse per il mondo dell’insegnamento. Frequentato il Regio Ginnasio “L.A. Muratori” a Modena e la Scuola Normale di Forlimpopoli, ove ottenne l’abilitazione all’insegnamento elementare nel 1906, due anni dopo egli seguì corsi di perfezionamento all’Università di Bologna e alla Scuola Samaritana Bolognese dell’Università Popolare “Giuseppe Garibaldi”, iniziando nel frattempo la sua carriera lavorativa come maestro elementare, che si svolse tra Emilia e Toscana.<br>  
+
+Nel 1916 Roli prese la laurea in Giurisprudenza presso l’Università di Modena e poi partecipò alla Prima Guerra Mondiale in qualità di ufficiale di Stato Maggiore, facendo numerose esperienze in prima linea. Nel corso del conflitto, vergò interessanti lettere (che furono poi edite nel 1933) e venne decorato con la Medaglia d’Argento al Valor Militare, con la Croce di Guerra al Valor Militare e con tre Croci al Merito di Guerra.<br>  
+
+Dopo la Vittoria, Roli rientrò nella sua terra d’origine ed esercitò brillantemente per molti anni la professione d’avvocato nel paese natale e a Modena.<br> 
+
+Nel 1919 il nostro personaggio figurò tra i fondatori e fu il primo presidente del “Circolo Amicizia” di Vignola, il quale ebbe sede per quasi cinque lustri all’interno di quello che all’epoca veniva denominato Palazzo Boncompagni (o – con maggiore esattezza – Boncompagni Ludovisi, edificio oggigiorno noto – alternativamente – come Palazzo Contrari Boncompagni oppure come – con espressione impropria – Palazzo Barozzi), cessando poi l’attività fino al 1958 e risorgendo infine con lo stesso nome, ma in uno stabile di Via Paradisi.<br>
+
+Nel 1920 Roli sposò Virginia Bellei, dalla quale ebbe due figli, Antonio e Laura. L’anno successivo, dal 25 ottobre al 9 novembre, egli fu commissario prefettizio nel paese natale. Nel 1924 superò gli esami di idoneità al notariato.<br>  
+
+Il nostro personaggio godette di una certa fama a livello nazionale sia come enigmografo (con lo pseudonimo di «Fiordaliso») sia come autore di libri di carattere pedagogico e didattico destinati agli alunni delle Scuole Elementari.<br>  
+
+Durante la vita, Roli, nella sua terra d’origine e anche al di fuori di essa, venne apprezzato soprattutto come solerte cultore di memorie patrie e attento studioso di storia locale; nel 1950 fu vicepresidente, a fianco dell’amico enigmografo <strong>Aldo Santi</strong>, del Comitato Vignolese per le Onoranze a <strong>Lodovico Antonio Muratori</strong> nel Secondo Centenario della Morte. Attualmente, non solo nel paese natale, egli è ricordato soprattutto per pubblicazioni poetiche spesso di alta sensibilità e di indubbio estro, fra le quali primeggiano due raccolte di versi, <i>Faléster</i> (1936, in dialetto modenese) e <i>Faléster dl’Inféren</i> (1951, in italiano e in dialetto).<br>  
+
+Roli morì a Vignola il 25 giugno 1959 e venne inumato nel cimitero cittadino.<br>  
+
+Il Gruppo di Documentazione “Mezaluna - Mario Menabue” di Vignola e la famiglia del nostro personaggio, in collaborazione con la Fondazione di Vignola e il “Circolo Paradisi” (sorto nel 2006 dall’unione del già menzionato “Circolo Amicizia” con un altro ente sociale vignolese, il “Club Jacopo Barozzi”), hanno allestito una mostra monografica dal titolo <i>Ugo Roli da Vignola</i>, tenutasi nelle Sale della Meridiana della rocca cittadina dal 7 al 15 ottobre 2017.</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
-	
-<p><center><big><big>Fotografia che ritrae Roli nella prima maturità. Fonte: google.com</big></big></center><br>
-<center><img src="img/celebri vignolesi/Roli Ugo/roligiovane.jpg" width="500" height="680"></center><br><br>	
+
+<p><center><big><big>Fotografia che ritrae Roli nella prima maturità.</big></big></center><br>
+<center><img src="img/celebri vignolesi/Roli Ugo/roligiovane.jpg" width="500" height="680"></center><br><br>
 	<p><center><big><big>Frontespizio di <i>Faléster dl’Inféren</i> (1951), opera in versi (dialettali e italiani) di Roli.</big></big></center><br>
 		<center><img src="img/celebri vignolesi/Roli Ugo/libro.jpg" width="500" height="700"></center><br><br>
 <p><center><big><big>Locandina ufficiale della mostra vignolese su Roli (ottobre 2017). Fonte: google.com</big></big></center><br>
