--- a/Redorici Roffi.html
+++ b/Redorici Roffi.html
@@ -47,7 +47,7 @@ Nell’anno della ricorrenza secolare della sua nascita, la sera del 15 dicembre
 <h5><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></h5><br>
 
 <p><center><big>Una giovane Redorici Roffi fotografata a Tavernelle.<br>
-Fonte: Augusta Redorici Roffi - Maria Grazia Grilli, <i>Il molino di Campiglio e il molino di Tavernelle,<br>  
+Fonte: Augusta Redorici Roffi - Maria Grazia Grilli,<br> <i>Il molino di Campiglio e il molino di Tavernelle,<br>  
 in Giampaolo Grandi (a cura di), Con la Forza dell’Acqua. Storie d’acque, di opifici, di lavoro e di uomini<br> sul Canale di Marano, di S. Pietro, del Diamante, sul Canalino Castellano, sul Torbido</i>,<br> 
 progetto editoriale del Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”,<br> Savignano s.P., Tipolitografia FG, 2010, pp. 107-122: 115.</big></center></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/giovane.jpg" width="650" height="700"><br><br>
