--- a/Redorici Roffi.html
+++ b/Redorici Roffi.html
@@ -46,13 +46,12 @@ Nell’anno della ricorrenza secolare della sua nascita, la sera del 15 dicembre
 
 <h5><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></h5><br>
 
-<p><center><big>Una giovane Redorici Roffi fotografata a Tavernelle.<br>
-Fonte: Augusta Redorici Roffi - Maria Grazia Grilli,<br> <i>Il molino di Campiglio e il molino di Tavernelle,<br>  
-in Giampaolo Grandi (a cura di), Con la Forza dell’Acqua. Storie d’acque, di opifici, di lavoro e di uomini<br> sul Canale di Marano, di S. Pietro, del Diamante, sul Canalino Castellano, sul Torbido</i>,<br> 
+<p><center><big>Una giovane Redorici Roffi fotografata a Tavernelle.
+Fonte: Augusta Redorici Roffi - Maria Grazia Grilli,<br> <i>Il molino di Campiglio e il molino di Tavernelle</i>, in Giampaolo Grandi (a cura di), <i>Con la Forza dell’Acqua. Storie d’acque, di opifici,<br> di lavoro e di uomini sul Canale di Marano, di S. Pietro, del Diamante, sul Canalino Castellano, sul Torbido</i>,<br> 
 progetto editoriale del Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”,<br> Savignano s.P., Tipolitografia FG, 2010, pp. 107-122: 115.</big></center></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/giovane.jpg" width="650" height="700"><br><br>
 
-<p><center><big>La Redorici Roffi nella tarda maturità. Fonte: volantino cartaceo dell'iniziativa<br> allestita il 15 dicembre 2022 nel Museo Civico a lei intitolato (vedi più sotto la locandina completa in formato digitale).</big></center></p>
+<p><center><big>La Redorici Roffi nella tarda maturità. Fonte: volantino cartaceo dell’iniziativa allestita<br> il 15 dicembre 2022 nel Museo Civico a lei intitolato (vedi più sotto la locandina completa in formato digitale).</big></center></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/volantinomuseo.jpg" width="500" height="500"><br><br>
 
 <p><center><big>La Redorici Roffi in un primo piano tratto dal volantino che informava degli eventi pubblici organizzati in suo ricordo,<br> a un anno e mezzo dalla scomparsa, e culminanti nell’intitolazione a lei del Museo Civico di Vignola (5 novembre 2011).</big></center></p>
@@ -66,7 +65,7 @@ progetto editoriale del Gruppo di Documentazione Vignolese “Mezaluna - Mario M
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/Chiese di Campiglio MODIFICATA.jpg" width="480" height="730"><br><br>
 
 <p><center><big>La prima di copertina di uno dei libri scritti dalla Redorici Roffi (per la precisione, si tratta dell’ultimo, pubblicato postumo):<br> 
-Augusta Redorici Roffi, <i>C’era una volta l’Impresa</i>, a cura di Maria Grazia Grilli, Vignola, s.n. [Savignano sul Panaro, Tipolitografia FG], 2011.</big></center></p>
+Augusta Redorici Roffi, <i>C’era una volta l’Impresa</i>, a cura di Maria Grazia Grilli,<br> Vignola, s.n. [Savignano sul Panaro, Tipolitografia FG], 2011.</big></center></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/Impresa.jpg" width="480" height="730"><br><br>
 
 <p><center><big>La tomba della Redorici Roffi e del marito.</big></center><br>
