--- a/Soli1.html
+++ b/Soli1.html
@@ -103,7 +103,7 @@ Per volontà degli eredi del grande architetto, il Fondo Soli venne affidato nel
 
 <p><big><big><center>Una fotografia recente della facciata del Casino Tosi Bellucci (già Bellucci) a Vignola.</center></big></big></p>
 <img src="img/FOTO VARIE/Casino Tosi Bellucci.jpg"><br><br><br>
-<p><big><big><center>Una fotografia scattata di recente a Corlo di Formigine: la chiesa di San Martino di Tours (o santuario della Beata Vergine della Neve)<br> e il suo campanile; Soli disegnò entrambe le strutture. Fonte: google.com</center></big></big></p>
+<p><big><big><center>Una fotografia scattata di recente a Corlo di Formigine: la chiesa di San Martino di Tours<br> (o santuario della Beata Vergine della Neve) e il suo campanile; Soli disegnò entrambe le strutture.<br> Fonte: google.com</center></big></big></p>
 <img src="img/celebri vignolesi/Soli Giuseppe Maria/corlo.jpg" width="450" height="530"><br><br><br>
 <p><center><big><big>Una fotografia recente della facciata verso Piazza San Marco delle Procuratie Nuovissime di Venezia. Fonte: google.com</big></big></center><br>
 	<img src="img/FOTO VARIE/procuratie.jpg"><br><br><br>
