--- a/Soli1.html
+++ b/Soli1.html
@@ -95,10 +95,10 @@ Per volontà degli eredi del grande architetto, il Fondo Soli venne affidato nel
 <p><center><big><big>Una fotografia recente della facciata della chiesa di San Pietro Apostolo a Carbognano. Soli fu architetto capo del cantiere di questo tempio negli ultimi due anni della sua permanenza a Roma. Fonte: google.com</big></big></center></p>
 <img src="img/celebri vignolesi/Soli Giuseppe Maria/chiesa.jpg" width="460" height="600"><br><br><br>
 
-	<p><center><big><big>L’antica Porta Sant’Agostino di Modena nell’incisione (a bulino su rame) che<br> Guglielmo Silvester (1763-1839) realizzò probabilmente nel 1791. Fonte: google.com</big></big></center><br>
+<p><center><big><big>L’antica Porta Sant’Agostino di Modena nell’incisione (a bulino su rame) che<br> Guglielmo Silvester (1763-1839) realizzò probabilmente nel 1791. Fonte: google.com</big></big></center><br>
 	<img src="img/FOTO VARIE/porta.jpg" width="650" height="450"><br><br><br>
 
-	<p><center><big><big>L’antico Ponte di Sant’Ambrogio in una cartolina risalente al 1900 ca. Fonte: google.com</big></big></center></p>
+<p><center><big><big>L’antico Ponte di Sant’Ambrogio in una cartolina risalente al 1900 ca. Fonte: google.com</big></big></center></p>
 <img src="img/celebri vignolesi/Soli Giuseppe Maria/ponte.jpg" width="760" height="470"><br><br><br>
 
 
@@ -110,7 +110,7 @@ Per volontà degli eredi del grande architetto, il Fondo Soli venne affidato nel
 	<img src="img/FOTO VARIE/procuratie.jpg"><br><br><br>
 <p><center><big><big>Una fotografia recente della parte centrale della facciata nord del Palazzo Ducale di Modena.<br> Fonte: <a href="https://www.giuseppemariasoli.it/galleria/">Giuseppe Maria Soli Bicentenario 1822-2022/Galleria</a></big></big></center><br>
 <img src="img/celebri vignolesi/Soli Giuseppe Maria/palazzo.jpg" width="760" height="470"><br><br><br>
-<p><center><big><big><i>Uno dei quadri dipinti da Soli nel corso del periodo romano:<br> Piazza Sant’Agostino a Modena con il monumento equestre del duca Francesco III d’Este</i>, olio su tela (1775);<br> Milano, Pinacoteca del Castello Sforzesco. Fonte: google.com</big></big></center><br>
+<p><center><big><big>Uno dei quadri dipinti da Soli nel corso del periodo romano:<br> <i>Piazza Sant’Agostino a Modena con il monumento equestre del duca Francesco III d’Este</i>, olio su tela (1775);<br> Milano, Pinacoteca del Castello Sforzesco. Fonte: google.com</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Giuseppe Maria/Immagine MODIFICATA.jpg" width="750" height="470"><br><br><br>
 
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
