--- a/Novità.html
+++ b/Novità.html
@@ -46,7 +46,7 @@
 <p><big><strong><i>Celebri Vignolesi</i> saluta il 2022 e augura a tutti Sereno e Prospero 2023</strong> presentando <strong><i>Veduta dal Panaro</i></strong>, quinta e ultima acquaforte della serie realizzata da <strong>Rino Zapparoli</strong> e intitolata <strong><i>Cinque vedute di Vignola</i></strong> (2008); l’esemplare qui riprodotto appartiene a una collezione privata. 
 
 Artista di assoluto rilievo, Zapparoli è nato nel 1938 a Sermide (MN), località che dal 2017 si trova nel Comune di Sermide e Felonica, ed è cresciuto a Bondeno (FE), ma risiede e lavora da decenni a Finale Emilia (MO), nella frazione di Massa Finalese. Ha partecipato a moltissime mostre personali e collettive in Italia e all’estero, ricevendo numerosi premi e riconoscimenti. Da lungo tempo, vanta rapporti stretti con il mondo artistico di Vignola, cittadina dove ha anche esposto, e fu amico di don <strong>Casimiro Bettelli</strong> (1924-1998), che scrisse di lui e delle sue opere in diverse occasioni.</big></p><br>
-<img src="img/FOTO VARIE/zapparoli5.jpg" width="630" height="510"><br><br><br><br>
+<img src="img/FOTO VARIE/Zapparoli5.jpg" width="630" height="510"><br><br><br><br>
 
 
 <p><big><big><span style="text-decoration: underline;">19 dicembre 2022</span></big></big></p><br><br>
