--- a/Novità.html
+++ b/Novità.html
@@ -41,10 +41,14 @@
 <strong>GIUSEPPE MARIA SOLI</strong>, architetto, pittore, insegnante e direttore di Accademia delle Belle Arti: <strong>200 ANNI DALLA MORTE</strong>.</big></p>
 <p><big>Nell’immagine, vista della rocca di Vignola da Via Tufo in una fotografia scattata il 4 aprile 2022.</big></p><br>
 <img src="img/FOTO VARIE/viatufo.jpg" width="600" height="800"><br><br><br><br><br><br>
+	
+<p><big><big><span style="text-decoration: underline;">6 gennaio 2023</span></big></big></p><br><br>
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL FRINGUELLO VIAGGIATORE</strong></i>, la ventiduesima favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>Francesco Selmi</strong> (1817-1881):<br>  
+«Una giovane rondine, nel ritorno dal suo primo passaggio, fu ricevuta con liete e festose accoglienze da tutti gli uccelli suoi amici; i quali, non appena sentirono il primo alito di aere intepidito, stettero in sull’aspettarla, bramasi di udire da lei le nuove dei lontani paesi a cui peregrinò. Fu un garrire dei più confusi intorno a lei, un saltellare, uno svolazzare dei più inquieti e curiosi, da che ciascuno volevale andare più accosto degli altri, affine di cogliere dalla voce di lei direttamente i ragguagli delle meraviglie osservate e degli accidenti occorsi.»<br>
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>	
 
 <p><big><big><span style="text-decoration: underline;">31 dicembre 2022</span></big></big></p><br><br>
 <p><big><strong><i>Celebri Vignolesi</i> saluta il 2022 e augura a tutti Sereno e Prospero 2023</strong> presentando <strong><i>Veduta dal Panaro</i></strong>, quinta e ultima acquaforte della serie realizzata da <strong>Rino Zapparoli</strong> e intitolata <strong><i>Cinque vedute di Vignola</i></strong> (2008); l’esemplare qui riprodotto appartiene a una collezione privata. 
-
 Artista di assoluto rilievo, Zapparoli è nato nel 1938 a Sermide (MN), località che dal 2017 si trova nel Comune di Sermide e Felonica, ed è cresciuto a Bondeno (FE), ma risiede e lavora da decenni a Finale Emilia (MO), nella frazione di Massa Finalese. Ha partecipato a moltissime mostre personali e collettive in Italia e all’estero, ricevendo numerosi premi e riconoscimenti. Da lungo tempo, vanta rapporti stretti con il mondo artistico di Vignola, cittadina dove ha anche esposto, e fu amico di don <strong>Casimiro Bettelli</strong> (1924-1998), che scrisse di lui e delle sue opere in diverse occasioni.</big></p><br>
 <img src="img/FOTO VARIE/Zapparoli5.jpg" width="630" height="510"><br><br><br><br>
 
