--- a/Soli1.html
+++ b/Soli1.html
@@ -117,7 +117,7 @@ Per volontà degli eredi del grande architetto, il Fondo Soli venne affidato nel
 <p><center><big><big>Un altro dei quadri dipinti da Soli nel corso del periodo romano:<br> 
 <i>Archimede</i>, olio su tela (1779); Modena, Museo Civico. Fonte: google.com</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Giuseppe Maria/archimede.jpg" width="750" height="560"><br><br><br>
-<p><center><big><big>Soli, <i>Ritratto di Ercole III d’Este</i>, olio su tela (1793 ca.);<br> Palazzo Ducale di Modena (in comodato dalla Galleria Estense della stessa città). Fonte: google.com</big></big></center><br>
+<p><center><big><big>Soli, <i>Ritratto di Ercole III d’Este</i>, olio su tela (1793 ca.);<br> Modena, Palazzo Ducale (in comodato dalla Galleria Estense della stessa città). Fonte: google.com</big></big></center><br>
 <img src="img/celebri vignolesi/Soli Giuseppe Maria/ritrattoercole.jpg" width="350" height="530"><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
