--- a/Gazzotti.html
+++ b/Gazzotti.html
@@ -34,7 +34,18 @@
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 	<p></p>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br><br>
+<p><big><big><center>Fotografia che ritrae il compositore intorno ai venticinque anni.<br> Fonte: Pierluigi Albertini, <i>Luigi Gazzotti (1886-1923). La vita</i>, <br> in AA.VV., <i>Luigi Gazzotti un musicista… ritrovato. 1886-1923. 90° anniversario della morte</i>,<br> Centro Studi Vignola, Savignano sul Panaro (MO), Tipolitografia F.G., 2013, pp. 8-10: 8.</center></big></big></p>
+<img src="img/celebri vignolesi/Gazzotti/gazzotti.jpg" width="470" height="600"></p><br>
+
+<p><big><big><center>Fotografia che ritrae il compositore quando era forse alle soglie dei trent’anni. Fonte: google.com</center></big></big></p>
+<img src="img/celebri vignolesi/Gazzotti/gazzottiseduto.jpg" width="470" height="608"></p><br>
+<p><big><big><center>Copertina di <i>Messa da Requiem per Tenore, Baritono, Basso, Coro ed Orchestra. Musica di Luigi Gazzotti.<br> Riduzione per Canto e Pianoforte</i>, Milano, Officine G. Ricordi & C., s.d. [1914?].<br> Fonte: Luca Saltini, <i>Riflessioni musicali su Luigi Gazzotti</i>,<br> in AA.VV., <i>Luigi Gazzotti un musicista… ritrovato</i>, cit., pp. 26-34: 33.</center></big></big></p>
+<img src="img/celebri vignolesi/Gazzotti/messa.jpg" width="500" height="608"></p><br>
+
+<p><big><big><center>Tomba della famiglia Gazzotti (cimitero di Vignola) dove riposa il compositore.</center></big></big></p>
+<img src="img/celebri vignolesi/Gazzotti/tomba.jpg" width="400" height="670"></p><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
+
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
